Bug 1717760 - Stop using `KeyEvent.initKeyEvent` in our tests r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D121028

UltraBlame original commit: 2ee20e58b0f19d0ac7e78a99ea8ff1f03b5784d6

--- a/devtools/server/tests/chrome/test_inspector-pick-color.html
+++ b/devtools/server/tests/chrome/test_inspector-pick-color.html
@@ -448,33 +448,28 @@ canceled
 const
 keyboardEvent
 =
+new
 win
 .
-document
-.
-createEvent
-(
-"
 KeyboardEvent
-"
-)
-;
-keyboardEvent
-.
-initKeyEvent
 (
 "
 keydown
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 win
-false
-false
-false
-false
+keyCode
+:
 27
-0
+}
 )
 ;
 win
