--- a/dom/base/test/test_bug666604.html
+++ b/dom/base/test/test_bug666604.html
@@ -326,31 +326,32 @@ ctrl
 var
 e
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-e
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 window
+ctrlKey
+:
 ctrl
-false
-false
-false
+keyCode
+:
 13
+charCode
+:
 0
+}
 )
 ;
 target
