--- a/dom/events/test/test_bug456273.html
+++ b/dom/events/test/test_bug456273.html
@@ -226,30 +226,30 @@ doTest
 var
 ev
 =
-document
-.
-createEvent
-(
-'
+new
 KeyboardEvent
-'
-)
-;
-ev
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
+ctrlKey
+:
 true
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 z
 "
@@ -258,6 +258,7 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
 SpecialPowers
