--- a/dom/html/test/file_fullscreen-api-keys.html
+++ b/dom/html/test/file_fullscreen-api-keys.html
@@ -74,31 +74,27 @@ focus
 var
 evt
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-evt
-.
-initKeyEvent
 (
 "
 keydown
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 window
-false
-false
-false
-false
 keyCode
+charCode
+:
 0
+}
 )
 ;
 document
@@ -112,31 +108,27 @@ evt
 ;
 evt
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-evt
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 window
-false
-false
-false
-false
 keyCode
+charCode
+:
 0
+}
 )
 ;
 document
@@ -150,31 +142,27 @@ evt
 ;
 evt
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-evt
-.
-initKeyEvent
 (
 "
 keyup
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 window
-false
-false
-false
-false
 keyCode
+charCode
+:
 0
+}
 )
 ;
 document
