--- a/dom/html/test/forms/test_input_untrusted_key_events.html
+++ b/dom/html/test/forms/test_input_untrusted_key_events.html
@@ -266,76 +266,27 @@ target
 var
 evt
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-var
-canBubbleArg
-=
+(
+eventType
+{
+bubbles
+:
 true
-;
-var
-cancelableArg
-=
+cancelable
+:
 true
-;
-var
-viewArg
-=
+view
+:
 document
 .
 defaultView
-;
-var
-ctrlKeyArg
-=
-false
-;
-var
-altKeyArg
-=
-false
-;
-var
-shiftKeyArg
-=
-false
-;
-var
-metaKeyArg
-=
-false
-;
-var
-keyCodeArg
-=
 keyCode
-;
-var
-charCodeArg
-=
+charCode
+:
 0
-;
-evt
-.
-initKeyEvent
-(
-eventType
-canBubbleArg
-cancelableArg
-viewArg
-ctrlKeyArg
-altKeyArg
-shiftKeyArg
-metaKeyArg
-keyCodeArg
-charCodeArg
+}
 )
 ;
 target
