--- a/editor/libeditor/tests/test_contenteditable_text_input_handling.html
+++ b/editor/libeditor/tests/test_contenteditable_text_input_handling.html
@@ -1200,30 +1200,27 @@ aDispatchTarget
 var
 keyEvent
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-keyEvent
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 aKeyCode
+charCode
+:
 aChar
 ?
 aChar
@@ -1234,6 +1231,7 @@ charCodeAt
 )
 :
 0
+}
 )
 ;
 aDispatchTarget
