--- a/editor/libeditor/tests/test_keypress_untrusted_event.html
+++ b/editor/libeditor/tests/test_keypress_untrusted_event.html
@@ -385,32 +385,29 @@ true
 var
 keypress
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-keypress
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 document
 .
 defaultView
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 a
 "
@@ -419,6 +416,7 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
 input
@@ -526,32 +524,29 @@ true
 var
 keypress
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-keypress
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 document
 .
 defaultView
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 b
 "
@@ -560,6 +555,7 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
 textarea
@@ -655,32 +651,29 @@ true
 var
 keypress
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-keypress
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 document
 .
 defaultView
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 c
 "
@@ -689,6 +682,7 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
 div
