--- a/toolkit/content/tests/chrome/bug360437_window.xhtml
+++ b/toolkit/content/tests/chrome/bug360437_window.xhtml
@@ -912,36 +912,34 @@ i
 let
 event
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 str
 .
 charCodeAt
 (
 i
 )
+}
 )
 ;
 gFindBar
