--- a/toolkit/content/tests/chrome/findbar_events_window.xhtml
+++ b/toolkit/content/tests/chrome/findbar_events_window.xhtml
@@ -791,36 +791,34 @@ box
 let
 event
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 query
 .
 charCodeAt
 (
 0
 )
+}
 )
 ;
 gFindBar
