--- a/toolkit/content/tests/chrome/findbar_window.xhtml
+++ b/toolkit/content/tests/chrome/findbar_window.xhtml
@@ -2035,36 +2035,34 @@ promiseFindResult
 let
 event
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 str
 .
 charCodeAt
 (
 i
 )
+}
 )
 ;
 gFindBar
@@ -3101,39 +3099,33 @@ function
 )
 {
 let
-document
+event
 =
+new
 content
 .
-document
-;
-let
-event
-=
-document
+window
 .
-createEvent
-(
-"
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 '
 "
@@ -3142,8 +3134,11 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
+content
+.
 document
 .
 documentElement
@@ -4060,39 +4055,33 @@ function
 )
 {
 let
-document
+event
 =
+new
 content
 .
-document
-;
-let
-event
-=
-document
+window
 .
-createEvent
-(
-"
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 /
 "
@@ -4101,8 +4090,11 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
+content
+.
 document
 .
 documentElement
@@ -4253,39 +4245,33 @@ function
 )
 {
 let
-document
+event
 =
+new
 content
 .
-document
-;
-let
-event
-=
-document
+window
 .
-createEvent
-(
-"
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 '
 "
@@ -4294,8 +4280,11 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
+content
+.
 document
 .
 documentElement
