--- a/toolkit/content/tests/chrome/bug304188_window.xhtml
+++ b/toolkit/content/tests/chrome/bug304188_window.xhtml
@@ -653,35 +653,35 @@ args
 let
 event
 =
+new
 content
 .
-document
+window
 .
-createEvent
-(
-"
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 args
 .
 charCode
+}
 )
 ;
 content
