--- a/toolkit/content/tests/chrome/bug429723_window.xhtml
+++ b/toolkit/content/tests/chrome/bug429723_window.xhtml
@@ -359,36 +359,34 @@ i
 var
 event
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 aString
 .
 charCodeAt
 (
 i
 )
+}
 )
 ;
 gFindBar
@@ -514,33 +512,31 @@ term
 var
 event
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 KeyEvent
 .
 DOM_VK_BACK_SPACE
+charCode
+:
 0
+}
 )
 ;
 gFindBar
