--- a/toolkit/content/tests/chrome/findbar_entireword_window.xhtml
+++ b/toolkit/content/tests/chrome/findbar_entireword_window.xhtml
@@ -1467,36 +1467,34 @@ promiseFindResult
 let
 event
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 str
 .
 charCodeAt
 (
 i
 )
+}
 )
 ;
 gFindBar
@@ -1973,39 +1971,33 @@ function
 )
 {
 let
-document
+event
 =
+new
 content
 .
-document
-;
-let
-event
-=
-document
+window
 .
-createEvent
-(
-"
 KeyboardEvent
-"
-)
-;
-event
-.
-initKeyEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 0
+charCode
+:
 "
 /
 "
@@ -2014,8 +2006,11 @@ charCodeAt
 (
 0
 )
+}
 )
 ;
+content
+.
 document
 .
 documentElement
