Bug 1717760 - Disable `KeyEvent.initKeyEvent` by default r=smaug
Now, Gecko is the only browser to support undocumented `KeyEvent.initKeyEvent`.
We should drop it by default because `typeof KeyboardEvent.initKeyEvent` is
used at least in a major web-site and which causes not working the web-site.

Differential Revision: https://phabricator.services.mozilla.com/D121029

UltraBlame original commit: 81a7baecf0cb61ff4a02e18a2c72466f9a993c65

--- a/dom/events/test/test_dom_keyboard_event.html
+++ b/dom/events/test/test_dom_keyboard_event.html
@@ -1234,6 +1234,25 @@ Scroll
 "
 ]
 ;
+const
+kIsInitKeyEventAvailable
+=
+SpecialPowers
+.
+getBoolPref
+(
+"
+dom
+.
+keyboardevent
+.
+init_key_event
+.
+enabled
+"
+false
+)
+;
 for
 (
 var
@@ -1332,6 +1351,15 @@ metaKey
 }
 else
 {
+if
+(
+!
+kIsInitKeyEventAvailable
+)
+{
+continue
+;
+}
 e
 .
 initKeyEvent
