Bug 1719110 - Don't use sync IPC to show suggestion by spellchecker. r=Gijs
CheckCurrentWord on content process causes sync IPC, so I would like to remove
this call on content process. New nsIEditorSpellChecker.suggest method can
avoid it.

Differential Revision: https://phabricator.services.mozilla.com/D119937

UltraBlame original commit: ef67a3710b96e560a484c7d071ad94acae59e682

--- a/extensions/spellcheck/tests/mochitest/test_bug1272623.html
+++ b/extensions/spellcheck/tests/mochitest/test_bug1272623.html
@@ -410,6 +410,30 @@ jsm
 "
 )
 ;
+const
+{
+BrowserTestUtils
+}
+=
+ChromeUtils
+.
+import
+(
+"
+resource
+:
+/
+/
+testing
+-
+common
+/
+BrowserTestUtils
+.
+jsm
+"
+)
+;
 /
 /
 Chrome
@@ -442,6 +466,7 @@ Cu
 .
 dispatch
 (
+async
 function
 (
 )
@@ -484,6 +509,55 @@ suggestion
 "
 )
 ;
+if
+(
+!
+suggestion
+)
+{
+await
+BrowserTestUtils
+.
+waitForMutationCondition
+(
+contextMenu
+{
+childList
+:
+true
+}
+(
+)
+=
+>
+contextMenu
+.
+querySelector
+(
+"
+.
+spell
+-
+suggestion
+"
+)
+)
+;
+suggestion
+=
+contextMenu
+.
+querySelector
+(
+"
+.
+spell
+-
+suggestion
+"
+)
+;
+}
 suggestion
 .
 doCommand
