--- a/testing/web-platform/tests/resize-observer/svg.html
+++ b/testing/web-platform/tests/resize-observer/svg.html
@@ -3309,18 +3309,6 @@ width
 50
 )
 ;
-document
-.
-body
-.
-style
-.
-zoom
-=
-0
-.
-1
-;
 }
 notify
 :
@@ -3442,7 +3430,7 @@ devicePixelContentBoxSize
 ]
 .
 inlineSize
-5
+50
 )
 ;
 assert_equals
@@ -3458,7 +3446,7 @@ devicePixelContentBoxSize
 ]
 .
 blockSize
-2
+20
 )
 ;
 return
@@ -3471,6 +3459,277 @@ next
 step
 }
 }
+{
+setup
+:
+observer
+=
+>
+{
+target
+.
+setAttribute
+(
+'
+height
+'
+30
+)
+;
+}
+notify
+:
+(
+entries
+observer
+)
+=
+>
+{
+assert_equals
+(
+entries
+.
+length
+1
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+contentRect
+.
+width
+50
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+contentRect
+.
+height
+30
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+contentBoxSize
+[
+0
+]
+.
+inlineSize
+50
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+contentBoxSize
+[
+0
+]
+.
+blockSize
+30
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+borderBoxSize
+[
+0
+]
+.
+inlineSize
+50
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+borderBoxSize
+[
+0
+]
+.
+blockSize
+30
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+devicePixelContentBoxSize
+[
+0
+]
+.
+inlineSize
+50
+)
+;
+assert_equals
+(
+entries
+[
+0
+]
+.
+devicePixelContentBoxSize
+[
+0
+]
+.
+blockSize
+30
+)
+;
+}
+}
+]
+)
+;
+return
+helper
+.
+start
+(
+)
+;
+}
+function
+test17
+(
+)
+{
+/
+/
+zoom
+is
+not
+a
+standard
+css
+property
+so
+we
+should
+check
+it
+first
+.
+If
+the
+/
+/
+browser
+doesn
+'
+t
+support
+it
+we
+skip
+this
+test
+.
+if
+(
+!
+CSS
+.
+supports
+(
+"
+zoom
+"
+"
+0
+.
+1
+"
+)
+)
+{
+return
+Promise
+.
+resolve
+(
+)
+;
+}
+let
+target
+=
+document
+.
+querySelector
+(
+'
+#
+g_rect
+'
+)
+;
+let
+helper
+=
+new
+ResizeTestHelper
+(
+"
+test17
+:
+observe
+g
+:
+rect
+content
+border
+and
+device
+-
+pixel
+-
+content
+boxes
+with
+zoom
+"
+[
 {
 setup
 :
@@ -3503,10 +3762,32 @@ target
 setAttribute
 (
 '
+width
+'
+50
+)
+;
+target
+.
+setAttribute
+(
+'
 height
 '
 30
 )
+;
+document
+.
+body
+.
+style
+.
+zoom
+=
+0
+.
+1
 ;
 }
 notify
@@ -4098,6 +4379,21 @@ then
 {
 return
 test16
+(
+)
+;
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
+return
+test17
 (
 )
 ;
