Bug 1722911 - Ensure tests within dom/security are https-first compliant. r=ckerschb
Differential Revision: https://phabricator.services.mozilla.com/D121865

UltraBlame original commit: 489f66b84d4cadd395837b977772919d5daa081c

--- a/dom/security/test/csp/test_uir_top_nav.html
+++ b/dom/security/test/csp/test_uir_top_nav.html
@@ -319,6 +319,11 @@ result
 )
 ;
 }
+function
+startTest
+(
+)
+{
 document
 .
 getElementById
@@ -353,6 +358,53 @@ file_uir_top_nav
 .
 html
 "
+;
+}
+/
+/
+Don
+'
+t
+upgrade
+to
+https
+to
+test
+that
+upgrade
+-
+insecure
+-
+requests
+acts
+correctly
+and
+/
+/
+start
+test
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+dom
+.
+security
+.
+https_first
+"
+false
+]
+]
+}
+startTest
+)
 ;
 <
 /
