--- a/dom/security/test/csp/test_upgrade_insecure_navigation.html
+++ b/dom/security/test/csp/test_upgrade_insecure_navigation.html
@@ -746,12 +746,49 @@ src
 }
 /
 /
+Don
+'
+t
+upgrade
+to
+https
+to
+test
+that
+upgrade
+-
+insecure
+-
+requests
+acts
+correctly
+/
+/
 start
 running
 the
 tests
-loadNextTest
+SpecialPowers
+.
+pushPrefEnv
 (
+{
+set
+:
+[
+[
+"
+dom
+.
+security
+.
+https_first
+"
+false
+]
+]
+}
+loadNextTest
 )
 ;
 <
