--- a/dom/security/test/general/test_cache_split.html
+++ b/dom/security/test/general/test_cache_split.html
@@ -137,7 +137,7 @@ requestLongerTimeout
 )
 ;
 const
-SAME_ORIGIN
+CROSS_ORIGIN
 =
 "
 http
@@ -151,11 +151,12 @@ test
 8888
 /
 "
+;
 const
-CROSS_ORIGIN
+SAME_ORIGIN
 =
 "
-http
+https
 :
 /
 /
