Bug 1718021 - Add name attribute to PermissionStatus r=johannh,peterv
Spec change https://github.com/w3c/permissions/pull/248

Differential Revision: https://phabricator.services.mozilla.com/D118692

UltraBlame original commit: d47214bb80b452b84b9685a7f8c21f2aee417cf6

--- a/dom/permission/tests/test_permissions_api.html
+++ b/dom/permission/tests/test_permissions_api.html
@@ -524,7 +524,7 @@ promisesToRevoke
 }
 checkPermissions
 (
-state
+expectedState
 )
 {
 const
@@ -537,6 +537,8 @@ map
 (
 {
 name
+:
+expectedName
 }
 )
 =
@@ -553,28 +555,49 @@ query
 (
 {
 name
+:
+expectedName
 }
 )
 .
 then
 (
 (
+{
+state
+name
+}
 )
 =
 >
+{
 is
 (
 state
-state
+expectedState
 correct
 state
 for
 '
 {
-name
+expectedName
 }
 '
 )
+is
+(
+name
+expectedName
+correct
+name
+for
+'
+{
+expectedName
+}
+'
+)
+}
 (
 )
 =
