Bug 1721628 - PointerEvent.getCoalescedEvents should return events with pointermove type; r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D122367

UltraBlame original commit: fbd9f430f89e0d439cfc53e6f4a9771fcb4f78ba

--- a/dom/events/test/pointerevents/test_getCoalescedEvents.html
+++ b/dom/events/test/pointerevents/test_getCoalescedEvents.html
@@ -401,6 +401,30 @@ is
 (
 coalescedEvent
 .
+type
+"
+pointermove
+"
+"
+getCoalescedEvents
+(
+)
+[
+"
++
+i
++
+"
+]
+.
+type
+"
+)
+;
+is
+(
+coalescedEvent
+.
 pointerId
 ev
 .
