Bug 1724899, suppress microtasks and timers only in the current tab when dom.input_events.canSuspendInBCG.enabled is false, r=kashav
Depends on D122290

Differential Revision: https://phabricator.services.mozilla.com/D122298

UltraBlame original commit: d2b290bff1276bc5a7f5a1892720887d1669e157

--- a/dom/base/test/test_suppressed_microtasks.html
+++ b/dom/base/test/test_suppressed_microtasks.html
@@ -133,12 +133,33 @@ now
 ;
 win
 .
+didRunMicrotask
+=
+false
+;
+win
+.
 onmessage
 =
 function
 (
 )
 {
+ok
+(
+win
+.
+didRunMicrotask
+"
+Should
+have
+run
+a
+microtask
+.
+"
+)
+;
 let
 period
 =
@@ -189,6 +210,23 @@ onmessage
 null
 ;
 }
+win
+.
+queueMicrotask
+(
+function
+(
+)
+{
+win
+.
+didRunMicrotask
+=
+true
+;
+}
+)
+;
 win
 .
 postMessage
@@ -360,6 +398,26 @@ xhr
 .
 send
 (
+)
+;
+is
+(
+previousTask
+-
+1
+"
+Shouldn
+'
+t
+have
+run
+microtasks
+during
+a
+sync
+XHR
+.
+"
 )
 ;
 }
