Bug 1725323 - Make `HTMLEditor::MaybeCollapseSelectionAtFirstEditableNode()` not use `WSRunScanner::ScanNextVisibleNodeOrBlockBoundary()` for searching editable content r=m_kato
`WSRunScanner::ScanNextVisibleNodeOrBlockBoundary()` is designed for scanning
editable content so that it's wrong to use it for scanning first editable leaf
node.

Differential Revision: https://phabricator.services.mozilla.com/D122479

UltraBlame original commit: c862c1a89dc73744c6bf219687c525dffcb915eb

--- a/testing/web-platform/tests/selection/contenteditable/initial-selection-on-focus.tentative.html
+++ b/testing/web-platform/tests/selection/contenteditable/initial-selection-on-focus.tentative.html
@@ -25,49 +25,6 @@ contenteditable
 title
 >
 <
-!
--
--
-if
-you
-move
-this
-file
-into
-cross
--
-browser
-'
-s
-directly
-you
-should
-include
-editing
-/
-include
-/
-tests
-.
-js
-for
-using
-addBrackets
-(
-)
-and
-get
-rid
-of
-it
-from
-this
-file
-.
--
--
->
-<
 script
 src
 =
@@ -102,22 +59,42 @@ js
 script
 >
 <
-body
+script
 >
-<
-p
-id
+var
+testsJsLibraryOnly
 =
-"
-staticText
-"
->
-out
-of
-editor
+true
 <
 /
-p
+script
+>
+<
+script
+src
+=
+"
+.
+.
+/
+.
+.
+/
+editing
+/
+include
+/
+tests
+.
+js
+"
+>
+<
+/
+script
+>
+<
+body
 >
 <
 div
@@ -155,7 +132,7 @@ function
 (
 )
 {
-var
+const
 tests
 =
 [
@@ -289,6 +266,153 @@ p
 [
 ]
 abc
+<
+/
+p
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+set
+selection
+to
+start
+of
+the
+first
+visible
+character
+in
+the
+text
+node
+in
+the
+<
+p
+>
+node
+"
+content
+:
+"
+<
+p
+>
+[
+]
+abc
+<
+/
+p
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+set
+selection
+to
+start
+of
+the
+text
+node
+in
+the
+<
+p
+>
+node
+because
+of
+preformatted
+white
+-
+space
+"
+content
+:
+"
+<
+p
+style
+=
+\
+"
+white
+-
+space
+:
+pre
+\
+"
+>
+[
+]
+abc
+<
+/
+p
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+set
+selection
+to
+start
+of
+the
+text
+node
+in
+the
+<
+p
+>
+node
+because
+of
+preformatted
+line
+break
+"
+content
+:
+"
+<
+p
+style
+=
+\
+"
+white
+-
+space
+:
+pre
+\
+"
+>
+[
+]
+\
+nabc
 <
 /
 p
@@ -1363,12 +1487,82 @@ second
 p
 >
 node
+following
+the
+empty
+<
+p
+>
+node
 "
 content
 :
 "
 <
 p
+>
+<
+/
+p
+>
+<
+p
+>
+[
+]
+abc
+<
+/
+p
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+set
+selection
+to
+start
+of
+the
+text
+node
+in
+the
+second
+<
+p
+>
+node
+following
+another
+<
+p
+>
+node
+containing
+only
+a
+comment
+node
+"
+content
+:
+"
+<
+p
+>
+<
+!
+-
+-
+comment
+-
+-
 >
 <
 /
@@ -1682,6 +1876,129 @@ p
 >
 [
 ]
+abc
+<
+/
+p
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+set
+selection
+to
+start
+of
+the
+text
+node
+in
+the
+first
+<
+p
+>
+node
+whose
+white
+-
+spaces
+are
+preformatted
+"
+content
+:
+"
+<
+p
+style
+=
+\
+"
+white
+-
+space
+:
+pre
+\
+"
+>
+[
+]
+<
+/
+p
+>
+<
+p
+>
+abc
+<
+/
+p
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+set
+selection
+to
+start
+of
+the
+text
+node
+in
+the
+first
+<
+p
+>
+node
+whose
+line
+breaks
+are
+preformatted
+"
+content
+:
+"
+<
+p
+style
+=
+\
+"
+white
+-
+space
+:
+pre
+\
+"
+>
+[
+]
+\
+n
+<
+/
+p
+>
+<
+p
+>
 abc
 <
 /
@@ -2288,9 +2605,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2328,9 +2644,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2376,9 +2691,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2428,9 +2742,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2482,9 +2795,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2541,9 +2853,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2604,9 +2915,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2662,9 +2972,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2724,9 +3033,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2791,9 +3099,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2845,9 +3152,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2904,9 +3210,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -2967,9 +3272,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -3025,9 +3329,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -3087,9 +3390,8 @@ description
 "
 editor
 should
-set
-focus
-to
+collapse
+selection
 before
 the
 non
@@ -3154,15 +3456,21 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 start
 of
-it
-if
+itself
+when
 there
 is
+only
+empty
+inline
+elements
+before
+the
 non
 -
 editable
@@ -3215,15 +3523,21 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 start
 of
-it
-if
+itself
+when
 there
 is
+only
+empty
+inline
+elements
+before
+the
 non
 -
 editable
@@ -3281,15 +3595,21 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 start
 of
-it
-if
+itself
+when
 there
 is
+only
+empty
+inline
+elements
+before
+the
 non
 -
 editable
@@ -3351,15 +3671,21 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 start
 of
-it
-if
+itself
+when
 there
 is
+only
+empty
+inline
+elements
+before
+the
 non
 -
 editable
@@ -3416,15 +3742,21 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 start
 of
-it
-if
+itself
+when
 there
 is
+only
+empty
+inline
+elements
+before
+the
 non
 -
 editable
@@ -3486,15 +3818,21 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 start
 of
-it
-if
+itself
+when
 there
 is
+only
+empty
+inline
+elements
+before
+the
 non
 -
 editable
@@ -3560,8 +3898,510 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
+to
+start
+of
+the
+first
+dive
+element
+when
+there
+is
+only
+empty
+inline
+elements
+before
+the
+non
+-
+editable
+node
+before
+first
+editable
+text
+node
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+span
+>
+<
+/
+span
+>
+<
+span
+contenteditable
+=
+\
+"
+false
+\
+"
+>
+<
+/
+span
+>
+<
+span
+>
+abc
+<
+/
+span
+>
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+start
+of
+the
+first
+dive
+element
+when
+there
+is
+only
+empty
+inline
+elements
+before
+the
+non
+-
+editable
+node
+having
+a
+text
+node
+before
+first
+editable
+text
+node
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+span
+>
+<
+/
+span
+>
+<
+span
+contenteditable
+=
+\
+"
+false
+\
+"
+>
+abc
+<
+/
+span
+>
+<
+span
+>
+def
+<
+/
+span
+>
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+start
+of
+the
+first
+dive
+element
+when
+there
+is
+only
+empty
+inline
+elements
+before
+the
+non
+-
+editable
+node
+having
+a
+<
+br
+>
+node
+before
+first
+editable
+text
+node
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+span
+>
+<
+/
+span
+>
+<
+span
+contenteditable
+=
+\
+"
+false
+\
+"
+>
+<
+br
+>
+<
+/
+span
+>
+<
+span
+>
+abc
+<
+/
+span
+>
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+start
+of
+the
+first
+dive
+element
+when
+there
+is
+only
+empty
+inline
+elements
+before
+the
+non
+-
+editable
+node
+before
+first
+editable
+<
+br
+>
+node
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+span
+>
+<
+/
+span
+>
+<
+span
+contenteditable
+=
+\
+"
+false
+\
+"
+>
+<
+/
+span
+>
+<
+span
+>
+<
+br
+>
+<
+/
+span
+>
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+start
+of
+the
+first
+dive
+element
+when
+there
+is
+only
+empty
+inline
+elements
+before
+the
+non
+-
+editable
+node
+having
+a
+text
+node
+before
+first
+editable
+<
+br
+>
+node
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+span
+>
+<
+/
+span
+>
+<
+span
+contenteditable
+=
+\
+"
+false
+\
+"
+>
+abc
+<
+/
+span
+>
+<
+span
+>
+<
+br
+>
+<
+/
+span
+>
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+start
+of
+the
+first
+dive
+element
+when
+there
+is
+only
+empty
+inline
+elements
+before
+the
+non
+-
+editable
+node
+having
+a
+<
+br
+>
+node
+before
+first
+editable
+<
+br
+>
+node
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+span
+>
+<
+/
+span
+>
+<
+span
+contenteditable
+=
+\
+"
+false
+\
+"
+>
+<
+br
+>
+<
+/
+span
+>
+<
+span
+>
+<
+br
+>
+<
+/
+span
+>
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
 to
 the
 first
@@ -3620,8 +4460,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -3685,8 +4525,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -3754,8 +4594,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -3818,8 +4658,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -3887,8 +4727,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -3960,8 +4800,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -4020,8 +4860,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -4085,8 +4925,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -4154,8 +4994,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -4218,8 +5058,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -4287,8 +5127,8 @@ description
 "
 editor
 should
-set
-focus
+collapse
+selection
 to
 the
 first
@@ -4354,542 +5194,205 @@ p
 >
 "
 }
-]
-;
-/
-/
-This
-function
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+start
+of
+itself
+if
+first
+content
 is
-copied
-from
-editing
-/
-include
-/
-tests
-.
-js
-function
-addBrackets
-(
-range
-)
-{
-/
-/
-Handle
-the
-collapsed
-case
-specially
-to
-avoid
-confusingly
-getting
-the
-/
-/
-markers
-backwards
-in
-some
-cases
-if
-(
-range
-.
-startContainer
-.
-nodeType
-=
-=
-Node
-.
-TEXT_NODE
-|
-|
-range
-.
-startContainer
-.
-nodeType
-=
-=
-Node
-.
-COMMENT_NODE
-)
-{
-if
-(
-range
-.
-collapsed
-)
-{
-range
-.
-startContainer
-.
-insertData
-(
-range
-.
-startOffset
-"
-[
-]
-"
-)
-;
-}
-else
-{
-range
-.
-startContainer
-.
-insertData
-(
-range
-.
-startOffset
-"
-[
-"
-)
-;
-}
-}
-else
-{
-var
-marker
-=
-range
-.
-collapsed
-?
-"
-{
-}
-"
-:
-"
-{
-"
-;
-if
-(
-range
-.
-startOffset
-!
-=
-range
-.
-startContainer
-.
-childNodes
-.
-length
-&
-&
-range
-.
-startContainer
-.
-childNodes
-[
-range
-.
-startOffset
-]
-.
-nodeType
-=
-=
-Node
-.
-TEXT_NODE
-)
-{
-range
-.
-startContainer
-.
-childNodes
-[
-range
-.
-startOffset
-]
-.
-insertData
-(
-0
-marker
-)
-;
-}
-else
-if
-(
-range
-.
-startOffset
-!
-=
-0
-&
-&
-range
-.
-startContainer
-.
-childNodes
-[
-range
-.
-startOffset
--
-1
-]
-.
-nodeType
-=
-=
-Node
-.
-TEXT_NODE
-)
-{
-range
-.
-startContainer
-.
-childNodes
-[
-range
-.
-startOffset
--
-1
-]
-.
-appendData
-(
-marker
-)
-;
-}
-else
-{
-/
-/
-Seems
-to
-serialize
-as
-I
-'
-d
-want
-even
-for
-tables
-.
-.
-.
-IE
-doesn
-'
-t
-/
-/
-allow
-undefined
-to
-be
-passed
-as
-the
-second
-argument
-(
-it
-throws
-/
-/
 an
-exception
-)
-so
-we
-have
+input
+element
+"
+content
+:
+"
+{
+}
+<
+input
+>
+abc
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
 to
-explicitly
-check
-the
-number
+start
 of
-/
-/
-children
-and
-pass
-null
-.
-range
-.
-startContainer
-.
-insertBefore
-(
-document
-.
-createTextNode
-(
-marker
-)
-range
-.
-startContainer
-.
-childNodes
-.
-length
-=
-=
-range
-.
-startOffset
-?
-null
+itself
+if
+first
+content
+is
+an
+hr
+element
+"
+content
 :
-range
-.
-startContainer
-.
-childNodes
-[
-range
-.
-startOffset
-]
-)
-;
-}
-}
-if
-(
-range
-.
-collapsed
-)
+"
 {
-return
-;
 }
-if
-(
-range
-.
-endContainer
-.
-nodeType
-=
-=
-Node
-.
-TEXT_NODE
-|
-|
-range
-.
-endContainer
-.
-nodeType
-=
-=
-Node
-.
-COMMENT_NODE
-)
+<
+hr
+>
+abc
+"
+}
 {
-range
-.
-endContainer
-.
-insertData
-(
-range
-.
-endOffset
-"
-]
-"
-)
-;
-}
-else
-{
-if
-(
-range
-.
-endOffset
-!
-=
-range
-.
-endContainer
-.
-childNodes
-.
-length
-&
-&
-range
-.
-endContainer
-.
-childNodes
-[
-range
-.
-endOffset
-]
-.
-nodeType
-=
-=
-Node
-.
-TEXT_NODE
-)
-{
-range
-.
-endContainer
-.
-childNodes
-[
-range
-.
-endOffset
-]
-.
-insertData
-(
-0
-"
-}
-"
-)
-;
-}
-else
-if
-(
-range
-.
-endOffset
-!
-=
-0
-&
-&
-range
-.
-endContainer
-.
-childNodes
-[
-range
-.
-endOffset
--
-1
-]
-.
-nodeType
-=
-=
-Node
-.
-TEXT_NODE
-)
-{
-range
-.
-endContainer
-.
-childNodes
-[
-range
-.
-endOffset
--
-1
-]
-.
-appendData
-(
-"
-}
-"
-)
-;
-}
-else
-{
-range
-.
-endContainer
-.
-insertBefore
-(
-document
-.
-createTextNode
-(
-"
-}
-"
-)
-range
-.
-endContainer
-.
-childNodes
-.
-length
-=
-=
-range
-.
-endOffset
-?
-null
+description
 :
-range
-.
-endContainer
-.
-childNodes
-[
-range
-.
-endOffset
+"
+editor
+should
+collapse
+selection
+to
+start
+of
+itself
+if
+first
+content
+is
+an
+textarea
+element
+"
+content
+:
+"
+{
+}
+<
+textarea
+>
+abc
+<
+/
+textarea
+>
+def
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+the
+input
+element
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+input
+>
+abc
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+the
+hr
+element
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+hr
+>
+abc
+<
+/
+div
+>
+"
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+to
+the
+textarea
+element
+"
+content
+:
+"
+<
+div
+>
+{
+}
+<
+textarea
+>
+abc
+<
+/
+textarea
+>
+def
+<
+/
+div
+>
+"
+}
 ]
-)
 ;
-}
-}
-}
-var
+const
 editor
 =
 document
@@ -4901,21 +5404,7 @@ editor
 "
 )
 ;
-var
-textInP
-=
-document
-.
-getElementById
-(
-"
-staticText
-"
-)
-.
-firstChild
-;
-var
+const
 selection
 =
 document
@@ -4926,20 +5415,10 @@ getSelection
 ;
 for
 (
-var
-i
-=
-0
-;
-i
-<
+const
+testData
+of
 tests
-.
-length
-;
-i
-+
-+
 )
 {
 test
@@ -4948,13 +5427,6 @@ function
 (
 )
 {
-/
-/
-Select
-outside
-the
-editor
-.
 editor
 .
 blur
@@ -4963,26 +5435,15 @@ blur
 ;
 selection
 .
-collapse
+removeAllRanges
 (
-textInP
 )
 ;
-/
-/
-Initialize
-the
-editor
-content
-.
 editor
 .
 innerHTML
 =
-tests
-[
-i
-]
+testData
 .
 content
 .
@@ -5003,16 +5464,15 @@ g
 "
 )
 ;
-/
-/
-Make
-the
-editor
-focused
-.
 editor
 .
 focus
+(
+)
+;
+editor
+.
+getBoundingClientRect
 (
 )
 ;
@@ -5022,6 +5482,16 @@ selection
 .
 rangeCount
 1
+"
+Only
+one
+caret
+should
+be
+in
+the
+editor
+"
 )
 ;
 if
@@ -5046,20 +5516,14 @@ assert_equals
 editor
 .
 innerHTML
-tests
-[
-i
-]
+testData
 .
 content
 )
 ;
 }
 }
-tests
-[
-i
-]
+testData
 .
 description
 )
@@ -5168,6 +5632,16 @@ selection
 .
 rangeCount
 1
+"
+Only
+one
+caret
+should
+be
+in
+the
+editor
+"
 )
 ;
 if
