Bug 1724282 [wpt PR 29919] - Fix 2d-getcontext-options.html test, a=testonly
Automatic update from web-platform-tests
Fix 2d-getcontext-options.html test

The test called getContext('2d', options) twice, so all the options got
added twice to actual object. The expected value doesn't take into
account of the second run. I added a reset for actual after the first
getContext.

Bug: 1233656

Change-Id: Ib0295ba41131e778e15ac1d23719faf8f1c0dbd0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3075720
Reviewed-by: Juanmi Huertas <juanmihdchromium.org>
Commit-Queue: Yi Xu <yiyixchromium.org>
Cr-Commit-Position: refs/heads/master{#909033}

--

wpt-commits: e401cea6b3b6942fb80b2b96ad0093651ffd2127
wpt-pr: 29919

UltraBlame original commit: 497c04d0deb50a4fc48ed5f688a65b6dc92bd2fd

--- a/testing/web-platform/tests/html/semantics/embedded-content/the-canvas-element/2d-getcontext-options.html
+++ b/testing/web-platform/tests/html/semantics/embedded-content/the-canvas-element/2d-getcontext-options.html
@@ -85,7 +85,7 @@ willReadFrequently
 "
 ]
 ;
-const
+var
 actual
 =
 [
@@ -237,6 +237,11 @@ creation
 )
 "
 )
+;
+actual
+=
+[
+]
 ;
 assert_equals
 (
