Bug 1724268 [wpt PR 29917] - Make dialog cancel event tests use test_driver.send_keys instead of test_driver.Actions(), a=testonly
Automatic update from web-platform-tests
Make dialog cancel event tests use test_driver.send_keys instead of test_driver.Actions() (#29917)

--

wpt-commits: 6d15ceb115cc3a739937f2bd29148ee46790af8a
wpt-pr: 29917

UltraBlame original commit: 5c5d77beb9937b00201f2597029c6090a752f077

--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-keydown-preventDefault.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-keydown-preventDefault.html
@@ -98,23 +98,33 @@ js
 script
 >
 <
-script
-src
+link
+rel
 =
 "
-/
-resources
-/
-testdriver
--
-actions
-.
-js
+help
 "
->
-<
+href
+=
+"
+https
+:
 /
-script
+/
+bugs
+.
+webkit
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+227534
+"
 >
 <
 link
@@ -319,35 +329,23 @@ showModal
 (
 )
 ;
-const
-escKey
-=
+test_driver
+.
+send_keys
+(
+document
+.
+documentElement
 "
 \
 uE00C
 "
-;
-new
-test_driver
-.
-Actions
-(
-)
-.
-keyDown
-(
-escKey
-)
-.
-keyUp
-(
-escKey
-)
-.
-send
-(
 )
 ;
+/
+/
+ESC
+key
 <
 /
 script
