--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-with-input.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-with-input.html
@@ -98,23 +98,33 @@ js
 script
 >
 <
-script
-src
+link
+rel
 =
 "
-/
-resources
-/
-testdriver
--
-actions
-.
-js
+help
 "
->
-<
+href
+=
+"
+https
+:
 /
-script
+/
+bugs
+.
+webkit
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+227534
+"
 >
 <
 link
@@ -228,35 +238,23 @@ triggerEscKey
 =
 >
 {
-const
-escKey
-=
+test_driver
+.
+send_keys
+(
+document
+.
+documentElement
 "
 \
 uE00C
 "
-;
-new
-test_driver
-.
-Actions
-(
-)
-.
-keyDown
-(
-escKey
-)
-.
-keyUp
-(
-escKey
-)
-.
-send
-(
 )
 ;
+/
+/
+ESC
+key
 }
 ;
 /
