Bug 1724477 [wpt PR 29930] - [mathml] Fix parsing of <mo> text content., a=testonly
Automatic update from web-platform-tests
[mathml] Fix parsing of <mo> text content.

Currently MathMLOperatorElement::ParseOperatorContent() relies on
Node::HasOneTextChild() to check and parse the text content of an <mo>
element. This does not work well if the element contains a comment
(e.g. <mo>&#0x2211;<!-- sum --></mo>) or was constructed dynamically
by appending two characters (e.g. <mo>==</mo>). This CL fixes that
issue by letting ParseOperatorContent() check the node children
directly.

Bug: 6606
Change-Id: I5642f2cef254ee0e005b4a0b7e45624a8066e2fe
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3076234
Reviewed-by: Mason Freed <masonfchromium.org>
Commit-Queue: Frédéric Wang <fwangigalia.com>
Cr-Commit-Position: refs/heads/master{#909399}

--

wpt-commits: 0d1609c4823c9d0c51bdc35728991d56aa63caac
wpt-pr: 29930

UltraBlame original commit: 0cc2fcd13377d2ac904427ed335364d735688761

--- a/testing/web-platform/tests/mathml/presentation-markup/operators/mo-single-char-and-children-ref.html
+++ b/testing/web-platform/tests/mathml/presentation-markup/operators/mo-single-char-and-children-ref.html
@@ -75,7 +75,7 @@ math
 {
 font
 :
-50px
+25px
 /
 1
 Ahem
@@ -457,6 +457,202 @@ span
 span
 >
 X
+<
+/
+mo
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+mo
+stretchy
+=
+"
+false
+"
+lspace
+=
+"
+0
+"
+rspace
+=
+"
+0
+"
+>
+<
+!
+-
+-
+COMMENT
+-
+-
+>
+X
+<
+/
+mo
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+There
+should
+be
+4
+/
+18em
+horizontal
+gaps
+around
+the
+middle
+rectangles
+:
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+mo
+lspace
+=
+"
+0
+.
+2222222222222222em
+"
+rspace
+=
+"
+0
+.
+2222222222222222em
+"
+>
+XX
+<
+/
+mo
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+mo
+id
+=
+"
+dynamic
+-
+text
+-
+add
+-
+2
+"
+lspace
+=
+"
+0
+.
+2222222222222222em
+"
+rspace
+=
+"
+0
+.
+2222222222222222em
+"
+>
+XX
 <
 /
 mo
