--- a/testing/web-platform/tests/mathml/presentation-markup/operators/mo-single-char-and-children.html
+++ b/testing/web-platform/tests/mathml/presentation-markup/operators/mo-single-char-and-children.html
@@ -185,7 +185,7 @@ math
 {
 font
 :
-50px
+25px
 /
 1
 Ahem
@@ -428,7 +428,7 @@ text
 add
 "
 >
-|
+=
 <
 /
 mo
@@ -568,6 +568,179 @@ math
 p
 >
 <
+p
+>
+<
+math
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+mo
+stretchy
+=
+"
+false
+"
+>
+<
+!
+-
+-
+COMMENT
+-
+-
+>
+(
+<
+/
+mo
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+There
+should
+be
+4
+/
+18em
+horizontal
+gaps
+around
+the
+middle
+rectangles
+:
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+mo
+>
+&
+amp
+;
+<
+!
+-
+-
+COMMENT
+-
+-
+>
+&
+amp
+;
+<
+/
+mo
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+mo
+id
+=
+"
+dynamic
+-
+text
+-
+add
+-
+2
+"
+>
+&
+amp
+;
+<
+/
+mo
+>
+<
+mn
+>
+p
+<
+/
+mn
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
 script
 src
 =
@@ -652,7 +825,38 @@ document
 createTextNode
 (
 "
-|
+=
+"
+)
+)
+;
+mo
+=
+document
+.
+getElementById
+(
+"
+dynamic
+-
+text
+-
+add
+-
+2
+"
+)
+;
+mo
+.
+appendChild
+(
+document
+.
+createTextNode
+(
+"
+&
 "
 )
 )
