Bug 1724309 [wpt PR 29921] - App history: fix event.formData to be POST-only, plus tests, a=testonly
Automatic update from web-platform-tests
App history: fix event.formData to be POST-only, plus tests

* event.formData is only supposed to be populated for POST form submissions. Fix that and update tests accordingly.

* A number of tests were using e.preventDefault() after all the asserts. This was subpar because if the asserts failed the event would not be prevented, i.e. we would leave the test page. Put the e.preventDefault() first.

* Test that event.formData does not appear for "traverse" or "reload" navigations even if the session history entry contains form data

Fixed: 1233710
Bug: 1183545
Change-Id: Ibc6307a9a8629df769c2eeae19b2d332af77843b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3076282
Commit-Queue: Domenic Denicola <domenicchromium.org>
Reviewed-by: Nate Chapin <japhetchromium.org>
Reviewed-by: Mason Freed <masonfchromium.org>
Cr-Commit-Position: refs/heads/master{#909507}

--

wpt-commits: bd68e1184f5068f85df9fc545e0c990a00ff204f
wpt-pr: 29921

UltraBlame original commit: 141770415b4ceb591f7d9cd115bc25edb9564b5f

--- a/testing/web-platform/tests/app-history/navigate-event/navigate-form-get.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-form-get.html
@@ -44,11 +44,6 @@ id
 "
 form
 "
-method
-=
-"
-post
-"
 action
 =
 "
@@ -133,6 +128,10 @@ url
 location
 .
 href
++
+"
+?
+"
 )
 ;
 assert_false
@@ -175,7 +174,18 @@ index
 1
 )
 ;
-assert_not_equals
+/
+/
+Because
+it
+'
+s
+a
+GET
+not
+a
+POST
+assert_equals
 (
 e
 .
@@ -211,9 +221,16 @@ submit
 form
 >
 submission
+with
+GET
+method
 fires
 navigate
 event
+but
+with
+formData
+null
 "
 )
 ;
