--- a/testing/web-platform/tests/app-history/navigate-event/navigate-form-reload.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-form-reload.html
@@ -71,17 +71,22 @@ id
 "
 form
 "
+action
+=
+"
+/
+common
+/
+blank
+.
+html
+?
+1
+"
 method
 =
 "
 post
-"
-action
-=
-"
-foo
-.
-html
 "
 target
 =
@@ -121,7 +126,14 @@ onnavigate
 =
 t
 .
-unreached_func
+step_func_done
+(
+(
+)
+=
+>
+{
+assert_unreached
 (
 "
 onnavigate
@@ -135,6 +147,56 @@ window
 "
 )
 ;
+}
+)
+;
+iframe
+.
+contentWindow
+.
+appHistory
+.
+onnavigate
+=
+t
+.
+step_func
+(
+e
+=
+>
+{
+assert_equals
+(
+e
+.
+navigationType
+"
+push
+"
+)
+;
+assert_not_equals
+(
+e
+.
+formData
+null
+)
+;
+iframe
+.
+onload
+=
+t
+.
+step_func
+(
+(
+)
+=
+>
+{
 iframe
 .
 contentWindow
@@ -157,113 +219,32 @@ e
 .
 navigationType
 "
-push
+reload
 "
 )
 ;
-assert_true
-(
-e
-.
-cancelable
-)
-;
-assert_true
-(
-e
-.
-canRespond
-)
-;
-assert_false
-(
-e
-.
-userInitiated
-)
-;
-assert_false
-(
-e
-.
-hashChange
-)
-;
 assert_equals
-(
-new
-URL
-(
-e
-.
-destination
-.
-url
-)
-.
-pathname
-"
-/
-app
--
-history
-/
-navigate
--
-event
-/
-foo
-.
-html
-"
-)
-;
-assert_false
-(
-e
-.
-destination
-.
-sameDocument
-)
-;
-assert_equals
-(
-e
-.
-destination
-.
-key
-null
-)
-;
-assert_equals
-(
-e
-.
-destination
-.
-id
-null
-)
-;
-assert_equals
-(
-e
-.
-destination
-.
-index
--
-1
-)
-;
-assert_not_equals
 (
 e
 .
 formData
 null
+)
+;
+}
+)
+;
+iframe
+.
+contentWindow
+.
+location
+.
+reload
+(
+)
+;
+}
 )
 ;
 }
@@ -280,22 +261,23 @@ submit
 ;
 }
 "
-<
-form
->
-submission
-with
+reloading
 a
-target
-fires
-navigate
-event
+page
+created
+from
+form
+submission
+results
 in
-target
-window
-but
+formData
+of
+null
 not
-source
+the
+original
+form
+data
 "
 )
 ;
