--- a/testing/web-platform/tests/app-history/navigate-event/navigate-form-userInitiated.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-form-userInitiated.html
@@ -99,6 +99,11 @@ id
 "
 form
 "
+method
+=
+"
+post
+"
 action
 =
 "
@@ -147,6 +152,12 @@ e
 =
 >
 {
+e
+.
+preventDefault
+(
+)
+;
 assert_equals
 (
 e
@@ -195,10 +206,6 @@ url
 location
 .
 href
-+
-"
-?
-"
 )
 ;
 assert_false
@@ -247,12 +254,6 @@ e
 .
 formData
 null
-)
-;
-e
-.
-preventDefault
-(
 )
 ;
 }
